--- a/Crm/.classpath
+++ b/Crm/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="/home/felipe/java/git/crmfatec/Crm/WebContent/WEB-INF/lib/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-8.0.18.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.6.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
